Display axis labels in Vega

--- a/app/assets/javascripts/templates/front/charts/bar.hbs
+++ b/app/assets/javascripts/templates/front/charts/bar.hbs
@@ -26,10 +26,20 @@
   }],
   "axes": [{
     "type": "x",
-    "scale": "x"
+    "scale": "x",
+    "title": {{{xColumn}}}
   }, {
     "type": "y",
-    "scale": "y"
+    "scale": "y",
+    "title": {{{yColumn}}},
+    "properties": {
+      "title": {
+        "angle": {"value": 0},
+        "y":{"value": -20 },
+        "x":{"value": -3 },
+        "font-family":{ "value":"Fira Sans" }
+      }
+    }
   }],
   "marks": [{
     "type": "rect",
