--- a/app/assets/javascripts/templates/front/charts/line.hbs
+++ b/app/assets/javascripts/templates/front/charts/line.hbs
@@ -33,10 +33,20 @@
   "axes": [{
     "type": "x",
     "scale": "x",
-    "ticks": 6
+    "ticks": 6,
+    "title": {{{xColumn}}}
   }, {
     "type": "y",
-    "scale": "y"
+    "scale": "y",
+    "title": {{{yColumn}}},
+    "properties": {
+      "title": {
+        "angle": {"value": 0},
+        "y":{"value": -20 },
+        "x":{"value": -12 },
+        "font-family":{ "value":"Fira Sans" }
+      }
+    }
   }],
   "marks": [{
     "type": "area",
