--- a/app/assets/javascripts/templates/front/charts/pie.hbs
+++ b/app/assets/javascripts/templates/front/charts/pie.hbs
@@ -61,7 +61,19 @@
         }
       }
     }
-  }, {
+  },{
+      "type": "text",
+      "properties": {
+        "enter": {
+          "x": {"value": 50},
+          "text": {
+            "template": {{{xColumn}}}
+          },
+          "fill": {"value": "black"},
+          "fontWeight": {"value": "bold"}
+        }
+      }
+  },{
     "type": "text",
     "from": {
       "data": "table"
