Create axis label inputs, update the Chart and show them in the preview

--- a/app/assets/javascripts/templates/front/chart-widget.hbs
+++ b/app/assets/javascripts/templates/front/chart-widget.hbs
@@ -4,4 +4,6 @@
     <div class="js-chart-selector"></div>
     <div class="js-switch-button"></div>
   </div>
+  <div id="custom-axis-input-container" class="c-input-search">
+  </div>
 </div>
