--- a/app/assets/javascripts/templates/front/charts/line.hbs
+++ b/app/assets/javascripts/templates/front/charts/line.hbs
@@ -34,11 +34,11 @@
     "type": "x",
     "scale": "x",
     "ticks": 6,
-    "title": {{{xColumn}}}
+    "title": {{{xLabel}}}
   }, {
     "type": "y",
     "scale": "y",
-    "title": {{{yColumn}}},
+    "title": {{{yLabel}}},
     "properties": {
       "title": {
         "angle": {"value": 0},
