--- a/app/assets/javascripts/templates/front/charts/pie.hbs
+++ b/app/assets/javascripts/templates/front/charts/pie.hbs
@@ -67,7 +67,7 @@
         "enter": {
           "x": {"value": 50},
           "text": {
-            "template": {{{xColumn}}}
+            "template": {{{xLabel}}}
           },
           "fill": {"value": "black"},
           "fontWeight": {"value": "bold"}
