--- a/app/assets/javascripts/templates/front/charts/bar.hbs
+++ b/app/assets/javascripts/templates/front/charts/bar.hbs
@@ -27,11 +27,11 @@
   "axes": [{
     "type": "x",
     "scale": "x",
-    "title": {{{xColumn}}}
+    "title": {{{xLabel}}}
   }, {
     "type": "y",
     "scale": "y",
-    "title": {{{yColumn}}},
+    "title": {{{yLabel}}},
     "properties": {
       "title": {
         "angle": {"value": 0},
