makes legends scale range the height of the widget

--- a/app/assets/javascripts/templates/front/charts/pie.hbs
+++ b/app/assets/javascripts/templates/front/charts/pie.hbs
@@ -31,7 +31,7 @@
     {
       "name": "legend-series-y",
       "type": "ordinal",
-      "range": [125,200],
+      "range": "height",
       "domain": {"data": "table","field": {{{xColumn}}} }
     }
   ],
@@ -52,7 +52,7 @@
           "field": {
             "group": "height"
           },
-          "mult": 0.5
+          "mult": 0.45
         },
         "startAngle": {
           "field": "layout_start"
@@ -95,7 +95,7 @@
           "field": {
             "group": "height"
           },
-          "mult": 0.5
+          "mult": 0.45
         },
         "radius": {
           "value": 80
