changes axes orientation in scatter and bar charts

--- a/app/assets/javascripts/templates/front/charts/bar.hbs
+++ b/app/assets/javascripts/templates/front/charts/bar.hbs
@@ -38,9 +38,9 @@
       "properties": {
       "labels": {
         "text": {"template": "\{{datum.data}}"},
-        "align": {"value": "left"},
+        "align": {"value": "right"},
         "baseline": {"value": "middle"},
-        "angle": {"value": 45},
+        "angle": {"value": -45},
         "fontSize": {"value": 11}
         }
       }
