fixes axes titles

--- a/app/assets/javascripts/templates/front/charts/bar.hbs
+++ b/app/assets/javascripts/templates/front/charts/bar.hbs
@@ -42,7 +42,13 @@
         "align": {"value": "right"},
         "baseline": {"value": "middle"},
         "angle": {"value": -45},
-        "fontSize": {"value": 11}
+        "fontSize": {"value": 11},
+        "dy": {"value": 20}
+        },
+        "title": {
+          "dx": {"value": 150},
+          "dy": {"value": 5},
+          "baseline": {"value": "top"}
         }
       }
     }, {
@@ -58,7 +64,6 @@
         "strokeWidth": {"value": 2},
         "strokeDash": {"value": [5, 5]}
       },
-      "majorTicks": {"strokeWidth": {"value": 2}},
       "ticks": {
         "stroke": {"value": "#eeeeee"},
         "strokeDash": {"value": [5, 5]}
@@ -69,7 +74,14 @@
         },
         "align": {"value": "left"},
         "baseline": {"value": "bottom"},
-        "fontSize": {"value": 11}
+        "fontSize": {"value": 11},
+        "dy": {"value": -15}
+        },
+        "title": {
+          "dx": {"value": 90},
+          "dy": {"value": -10},
+          "align": {"value": "right"},
+          "baseline": {"value": "top"}
         }
       }
   }],
