Use new mapbuilder version; load map builder version from backend

--- a/app/views/management/page_steps/map.html.erb
+++ b/app/views/management/page_steps/map.html.erb
@@ -22,9 +22,7 @@
           <div class="container">
             <label for="version">Version</label>
             <div class="c-select -small">
-              <select id="version">
-                <option value="1.1.10" selected>1.1.10</option>
-              </select>
+              <%= ff.select 'version', MapVersion.to_a %>
             </div>
           </div>
           <div class="container">
