prevents multiple chart toolbar render + hides invisible widgets sections

--- a/app/assets/javascripts/templates/front/charts/bar.hbs
+++ b/app/assets/javascripts/templates/front/charts/bar.hbs
@@ -1,6 +1,6 @@
 {
   "width": {{{width}}},
-  "height": {{{math height "+" 100}}},
+  "height": {{{height}}},
   "padding": "strict",
   "data": [{
     "name": "table",
