Add fallback map version

--- a/app/views/site_page/map.html.erb
+++ b/app/views/site_page/map.html.erb
@@ -221,7 +221,7 @@
             }
           }
         },
-        version: '<%= @site_page.content['version'] %>'
+        version: '<%= @site_page.content['version'] || '1.1.10' %>'
       });
     </script>
 <% end %>
