--- a/app/assets/javascripts/templates/front/charts/scatter.hbs
+++ b/app/assets/javascripts/templates/front/charts/scatter.hbs
@@ -30,7 +30,7 @@
     "tickSize": 5,
     "properties": {
       "labels": {
-        "text": {"template": "\{{datum.data}}"},
+        "text": {"template": "\{{datum.data | left:10}}"},
         "align": {"value": "right"},
         "baseline": {"value": "middle"},
         "angle": {"value": -45},
