--- a/app/assets/stylesheets/components/shared/c-select.scss
+++ b/app/assets/stylesheets/components/shared/c-select.scss
@@ -73,4 +73,11 @@
       line-height: 24px;
     }
   }
+
+  &.-admin > select {
+    background-color: $color-2;
+    border-radius: 4px;
+    border-color: $color-13;
+    text-transform: capitalize;
+  }
 }
