Fix: dashboard backwards compatibility (#194)
* removes rails redundant logic + serializes new widget options

* removes rails redundant logic + serializes new widget options

* prevents axes inputs showing up on chart change in dashboard

* Revert add visible to widgets migration

* prevents multiple chart toolbar render + hides invisible widgets sections

* create widgets always and render only visible ones

* truncates charts axes labels

* removes rails redundant logic + serializes new widget options

* removes rails redundant logic + serializes new widget options

* prevents axes inputs showing up on chart change in dashboard

* Revert add visible to widgets migration

* prevents multiple chart toolbar render + hides invisible widgets sections

* create widgets always and render only visible ones

* truncates charts axes labels

* Update shcema version

* fixes defaulting to true always

--- a/app/assets/javascripts/templates/front/charts/scatter.hbs
+++ b/app/assets/javascripts/templates/front/charts/scatter.hbs
@@ -1,6 +1,6 @@
 {
   "width": {{{width}}},
-  "height": {{{math height "+" 100}}},
+  "height": {{{height}}},
   "padding": "strict",
   "data": [{
     "name": "table",
@@ -30,7 +30,7 @@
     "tickSize": 5,
     "properties": {
       "labels": {
-        "text": {"template": "\{{datum.data}}"},
+        "text": {"template": "\{{datum.data | left:10}}"},
         "align": {"value": "right"},
         "baseline": {"value": "middle"},
         "angle": {"value": -45},
