--- a/app/assets/javascripts/templates/front/charts/bar.hbs
+++ b/app/assets/javascripts/templates/front/charts/bar.hbs
@@ -1,6 +1,6 @@
 {
   "width": {{{width}}},
-  "height": {{{math height "+" 100}}},
+  "height": {{{height}}},
   "padding": "strict",
   "data": [{
     "name": "table",
@@ -38,7 +38,7 @@
       "tickSize": 5,
       "properties": {
       "labels": {
-        "text": {"template": "\{{datum.data}}"},
+        "text": {"template": "\{{datum.data | truncate:10}}"},
         "align": {"value": "right"},
         "baseline": {"value": "middle"},
         "angle": {"value": -45},
