--- a/app/assets/stylesheets/components/shared/c-fieldset.scss
+++ b/app/assets/stylesheets/components/shared/c-fieldset.scss
@@ -40,6 +40,10 @@
       border-color: $color-1;
       box-shadow: 0 2px 3px 0 rgba($color-1, .1);
     }
+
+    &[type="text"]:disabled .-dashboard {
+      display: none;
+    }
   }
 
   textarea {
