--- a/app/assets/javascripts/templates/front/charts/vegaTheme.hbs
+++ b/app/assets/javascripts/templates/front/charts/vegaTheme.hbs
@@ -6,13 +6,12 @@
     "ticks": 5,
     "axisColor": "transparent",
     "axisWidth": 1,
-    "gridColor": "#999999",
-    "gridOpacity": 1,
     "tickColor": "#999999",
     "tickLabelColor": "#555555",
     "tickWidth": 0,
-    "tickSize": 10,
+    "tickSize": 5,
     "tickLabelFontSize": 11,
+    "tickLabelFontWeight": 300,
     "tickLabelFont": "\"Fira Sans\"",
     "tickOffset": 0,
     "titleFont": "\"Fira Sans\"",
@@ -48,7 +47,7 @@
     "hsl": [0,0,0.5]
   },
   "range": {
-    "colorRange": ["#e6e6e6","#97be32","#5c770a"],
+    "colorRange": ["#5c770a","#97be32","#e6e6e6"],
     "shapes": [
       "circle",
       "cross",
