--- a/app/assets/javascripts/templates/front/charts/bar.hbs
+++ b/app/assets/javascripts/templates/front/charts/bar.hbs
@@ -27,7 +27,7 @@
   {
     "name": "color",
     "type": "ordinal",
-    "range": ["#e6e6e6","#97be32","#5c770a"],
+    "range": "colorRange",
     "domain": {"data": "table","field": {{{xColumn}}} }
   }],
   "axes": [{
@@ -36,6 +36,7 @@
       "scale": "x",
       "title": {{{xLabel}}},
       "tickSize": 5,
+      "tickSizeEnd": 0,
       "properties": {
       "labels": {
         "text": {"template": "\{{datum.data | truncate:10}}"},
@@ -48,7 +49,11 @@
         "title": {
           "dx": {"value": 150},
           "dy": {"value": 5},
-          "baseline": {"value": "top"}
+          "baseline": {"value": "top"},
+          "fontWeight": {"value": 300}
+        },
+        "axis": {
+          "stroke": {"value": "#999999"}
         }
       }
     }, {
@@ -81,7 +86,8 @@
           "dx": {"value": 90},
           "dy": {"value": -10},
           "align": {"value": "right"},
-          "baseline": {"value": "top"}
+          "baseline": {"value": "top"},
+          "fontWeight": {"value": 300}
         }
       }
   }],
