corrects axes title positions

--- a/app/assets/javascripts/templates/front/charts/line.hbs
+++ b/app/assets/javascripts/templates/front/charts/line.hbs
@@ -40,7 +40,9 @@
         "stroke": {"value": "#999999"}
       },
       "title": {
-        "fontWeight": {"value": 300}
+        "fontWeight": {"value": 300},
+        "dy": {"value": 35},
+        "baseline": {"value": "top"}
       }
     }
   }, {
@@ -52,6 +54,7 @@
         "angle": {"value": 0},
         "y":{"value": -20 },
         "x":{"value": -12 },
+        "align": {"value": "left"},
         "fontWeight": {"value": 300}
       }
     }
