--- a/app/assets/javascripts/templates/front/charts/scatter.hbs
+++ b/app/assets/javascripts/templates/front/charts/scatter.hbs
@@ -36,12 +36,10 @@
         "align": {"value": "right"},
         "baseline": {"value": "middle"},
         "angle": {"value": -45},
-        "fontSize": {"value": 11},
-        "dy": {"value": 20}
+        "fontSize": {"value": 11}
       },
       "title": {
-        "dx": {"value": 150},
-        "dy": {"value": 5},
+        "dy": {"value": 35},
         "baseline": {"value": "top"},
         "fontWeight": {"value": 300}
       },
@@ -71,13 +69,13 @@
           "align": {"value": "left"},
           "baseline": {"value": "bottom"},
           "fontSize": {"value": 11},
-          "dy": {"value": -10}
-          },
+          "dx": {"value": 15}
+        },
           "title": {
-            "dx": {"value": 90},
-            "dy": {"value": -15},
-            "align": {"value": "right"},
-            "baseline": {"value": "top"},
+            "angle": {"value": 0},
+            "y":{"value": -20 },
+            "x":{"value": -12 },
+            "align": {"value": "left"},
             "fontWeight": {"value": 300}
           }
       }
