pie chart classes first approach

--- a/app/assets/javascripts/templates/front/charts/vegaTheme.hbs
+++ b/app/assets/javascripts/templates/front/charts/vegaTheme.hbs
@@ -47,7 +47,7 @@
     "hsl": [0,0,0.5]
   },
   "range": {
-    "colorRange": ["#5c770a","#97be32","#e6e6e6"],
+    "colorRange": ["#5c770a","#97be32","#e6e6e6", "#333333", "#999999"],
     "shapes": [
       "circle",
       "cross",
