adds styles to disabled

--- a/app/assets/stylesheets/components/shared/c-table.scss
+++ b/app/assets/stylesheets/components/shared/c-table.scss
@@ -87,6 +87,14 @@
         }
       }
     }
+
+    &.-disabled {
+      background-color: $color-2;
+
+      &:hover {
+        background-color: $color-2;
+      }
+    }
   }
 
   .header {
