inits lang selector and adds styles

--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -170,6 +170,12 @@
         }
       }
     }
+
+    .c-dropdown-selector {
+      > ul {
+        padding: 0;
+      }
+    }
   }
 
   > .desktop-menu {
