--- a/app/views/front/_menu.html.erb
+++ b/app/views/front/_menu.html.erb
@@ -30,7 +30,7 @@
         <% end -%>
       </ul>
       <ul>
-        <li class="notranslate js-language-selector-mobile"><a href="#">LANG</a></li>
+        <li class="notranslate js-language-selector-mobile"></li>
       </ul>
     </div>
   </div>
