--- a/app/views/management/page_steps/preview.html.erb
+++ b/app/views/management/page_steps/preview.html.erb
@@ -25,31 +25,33 @@
         <div class="wrapper">
           <div class="c-dashboard-bookmarks">
             <h3>Bookmarks:</h3>
-            <ul class="bookmarks">
-              <li class="js-bookmark" tabindex="0">
-                <span class="js-name">Bookmark #1</span>
-                <div>
-                  <button type="button" class="apply js-apply" title="Apply bookmark" aria-label="Apply bookmark">Bookmark #1</button>
-                  <div class="floating-buttons">
-                    <button type="button" class="-edit js-edit" title="Edit bookmark name">Edit bookmark name<svg width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path d="M11.279 0l3.711 3.711-9.278 9.278-3.711-3.71L11.279 0zM1.537 9.742l3.711 3.711-4.392.682.681-4.393z" fill="#FFF" fill-rule="evenodd"/></svg></button>
-                    <button type="button" class="-delete js-delete" title="Delete bookmark">Delete bookmark<svg width="10" height="14" viewBox="0 0 10 14" xmlns="http://www.w3.org/2000/svg"><path d="M7 1V0H3v1H0v2h10V1H7zM1 14h8V4H1v10z" fill="#555" fill-rule="evenodd"/></svg></button>
+            <div class="bookmarks-wrapper">
+              <ul class="bookmarks">
+                <li class="js-bookmark" tabindex="0">
+                  <span class="js-name">Bookmark #1</span>
+                  <div>
+                    <button type="button" class="apply js-apply" title="Apply bookmark" aria-label="Apply bookmark">Bookmark #1</button>
+                    <div class="floating-buttons">
+                      <button type="button" class="-edit js-edit" title="Edit bookmark name">Edit bookmark name<svg width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path d="M11.279 0l3.711 3.711-9.278 9.278-3.711-3.71L11.279 0zM1.537 9.742l3.711 3.711-4.392.682.681-4.393z" fill="#FFF" fill-rule="evenodd"/></svg></button>
+                      <button type="button" class="-delete js-delete" title="Delete bookmark">Delete bookmark<svg width="10" height="14" viewBox="0 0 10 14" xmlns="http://www.w3.org/2000/svg"><path d="M7 1V0H3v1H0v2h10V1H7zM1 14h8V4H1v10z" fill="#555" fill-rule="evenodd"/></svg></button>
+                    </div>
                   </div>
-                </div>
-              </li>
-              <li class="js-bookmark" tabindex="0">
-                <span class="js-name">Bookmark #2</span>
-                <div>
-                  <button type="button" class="apply js-apply" title="Apply bookmark" aria-label="Apply bookmark">Bookmark #2</button>
-                  <div class="floating-buttons">
-                    <button type="button" class="-edit js-edit" title="Edit bookmark name">Edit bookmark name<svg width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path d="M11.279 0l3.711 3.711-9.278 9.278-3.711-3.71L11.279 0zM1.537 9.742l3.711 3.711-4.392.682.681-4.393z" fill="#FFF" fill-rule="evenodd"/></svg></button>
-                    <button type="button" class="-delete js-delete" title="Delete bookmark">Delete bookmark<svg width="10" height="14" viewBox="0 0 10 14" xmlns="http://www.w3.org/2000/svg"><path d="M7 1V0H3v1H0v2h10V1H7zM1 14h8V4H1v10z" fill="#555" fill-rule="evenodd"/></svg></button>
+                </li>
+                <li class="js-bookmark" tabindex="0">
+                  <span class="js-name">Bookmark #2</span>
+                  <div>
+                    <button type="button" class="apply js-apply" title="Apply bookmark" aria-label="Apply bookmark">Bookmark #2</button>
+                    <div class="floating-buttons">
+                      <button type="button" class="-edit js-edit" title="Edit bookmark name">Edit bookmark name<svg width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path d="M11.279 0l3.711 3.711-9.278 9.278-3.711-3.71L11.279 0zM1.537 9.742l3.711 3.711-4.392.682.681-4.393z" fill="#FFF" fill-rule="evenodd"/></svg></button>
+                      <button type="button" class="-delete js-delete" title="Delete bookmark">Delete bookmark<svg width="10" height="14" viewBox="0 0 10 14" xmlns="http://www.w3.org/2000/svg"><path d="M7 1V0H3v1H0v2h10V1H7zM1 14h8V4H1v10z" fill="#555" fill-rule="evenodd"/></svg></button>
+                    </div>
                   </div>
-                </div>
-              </li>
-              <li class="add-button">
-                <button type="button" class="js-add-bookmark">Create bookmark</button>
-              </li>
-            </ul>
+                </li>
+              </ul>
+            </div>
+            <div class="add-button">
+              <button type="button" class="js-add-bookmark">Create bookmark</button>
+            </div>
           </div>
         </div>
       </div>
