--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -223,6 +223,7 @@
 
       > ul {
         height: 100%;
+        min-width: 45px;
         margin:  0;
         padding: 0;
         list-style: none;
