shows hamburguer menu in tablets too

--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -43,7 +43,7 @@
       background-color: $color-1;
     }
 
-    @media #{$mq-tablet} {
+    @media #{$mq-laptop} {
       display: none;
     }
 
@@ -124,7 +124,7 @@
     // This media query shouldn't be necessary but as the user could rotate
     // their device while the drawer is open, we want to make sure it's hidden
     // because otherway, they won't be able to close it without rotating back
-    @media #{$mq-tablet} {
+    @media #{$mq-laptop} {
       display: none;
     }
 
@@ -182,7 +182,7 @@
       background-color: $color-3;
     }
 
-    @media #{$mq-tablet} {
+    @media #{$mq-laptop} {
       display: flex;
       align-items: flex-start;
       justify-content: space-between;
@@ -411,7 +411,7 @@
         }
       }
 
-      @media #{$mq-tablet} {
+      @media #{$mq-laptop} {
         display: block;
       }
 
