--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -43,7 +43,7 @@
       background-color: $color-1;
     }
 
-    @media #{$mq-laptop} {
+    @media #{$mq-navbar} {
       display: none;
     }
 
@@ -122,14 +122,15 @@
     }
 
     @media #{$mq-tablet} {
-      left: -33%;
+      left: unset;
+      right: -33%;
       width: 33%;
     }
 
     // This media query shouldn't be necessary but as the user could rotate
     // their device while the drawer is open, we want to make sure it's hidden
     // because otherway, they won't be able to close it without rotating back
-    @media #{$mq-laptop} {
+    @media #{$mq-navbar} {
       display: none;
     }
 
@@ -156,6 +157,10 @@
 
     &.-opened {
       transform: translateX(100%);
+
+      @media #{$mq-tablet} {
+        transform: translateX(-100%);
+      }
 
       + .mobile-menu .hamburger-menu {
         position: fixed;
@@ -234,7 +239,7 @@
       background-color: $color-3;
     }
 
-    @media #{$mq-laptop} {
+    @media #{$mq-navbar} {
       display: flex;
       align-items: flex-start;
       justify-content: space-between;
@@ -287,6 +292,10 @@
           padding: 0 25px;
           line-height: 50px;
           text-transform: uppercase;
+          white-space: nowrap;
+          max-width: 150px;
+          overflow: hidden;
+          text-overflow: ellipsis;
 
           > a {
             padding: 0;
@@ -463,7 +472,7 @@
         }
       }
 
-      @media #{$mq-laptop} {
+      @media #{$mq-navbar} {
         display: block;
       }
 
