--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -285,6 +285,12 @@
         padding: 0;
         list-style: none;
 
+        &:first-child > li {
+          max-width: 150px;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+
         > li {
           display: inline-block;
           position: relative;
@@ -293,9 +299,6 @@
           line-height: 50px;
           text-transform: uppercase;
           white-space: nowrap;
-          max-width: 150px;
-          overflow: hidden;
-          text-overflow: ellipsis;
 
           > a {
             padding: 0;
