--- a/app/views/front/_menu.html.erb
+++ b/app/views/front/_menu.html.erb
@@ -63,7 +63,7 @@
       </a>
     </div>
     <div class="menu-container">
-      <div class="menu">
+      <div class="menu js-desktop-menu">
         <ul>
           <% @menu_root.children.each do |child_page| -%>
               <% next unless (child_page.show_on_menu && child_page.visible?) %>
