Add georgian support and update default language to french

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,10 +23,10 @@
   </script>
   <script type="text/javascript">
     window.liveSettings = {
-      api_key: 'a81c84348fa34de097781e4017e1a944',
+      api_key: 'f55e2d2ffd4748e5b062a1d54d5844f7',
       detectlang: function () {
         var match = location.search.match(/\?(?:.*)?l=([a-z]{2})/);
-        return (match && match.length) > 1 ? match[1]: '<%= @site_page.site.site_settings.default_site_language(@site_page.site_id).value || 'en' %>';
+        return (match && match.length) > 1 ? match[1]: '<%= @site_page.site.site_settings.default_site_language(@site_page.site_id).value || 'fr' %>';
       }
     };
   </script>
