--- a/app/views/site_page/sitemap.html.erb
+++ b/app/views/site_page/sitemap.html.erb
@@ -4,7 +4,7 @@
   </div>
 </div>
 
-<div class="l-error-page">
+<div class="l-sitemap">
   <div class="wrapper">
     <h1>Available pages</h1>
     <%= render partial: 'site_map' %>
