--- a/app/views/site_page/_site_map.html.erb
+++ b/app/views/site_page/_site_map.html.erb
@@ -1,7 +1,3 @@
 <p>Here are some links you might find helpful:</p>
 
-<ul class="sitemap">
-<% @menu_root.site.pages_for_sitemap.each do |page| %>
-  <li><%= page_link page %></li>
-<% end %>
-</ul>
+<%= nested_page_links @menu_root %>
