removes unset not supported in IE11

--- a/app/assets/stylesheets/components/front/c-cover.scss
+++ b/app/assets/stylesheets/components/front/c-cover.scss
@@ -98,7 +98,7 @@
     z-index: 2;
 
     > a {
-      background-color: unset;
+      background-color: transparent;
       color: $color-3;
       text-decoration: none;
 
@@ -107,7 +107,7 @@
       }
 
       &::selection {
-        background-color: unset;
+        background-color: transparent;
       }
     }
 
