renders dropdown if menu items is highert than 4 elements

--- a/app/views/front/_menu.html.erb
+++ b/app/views/front/_menu.html.erb
@@ -63,8 +63,8 @@
       </a>
     </div>
     <div class="menu-container">
-      <div class="menu js-desktop-menu">
-        <ul>
+      <div class="menu">
+        <ul class="js-desktop-menu is-hidden">
           <% @menu_root.children.each do |child_page| -%>
               <% next unless (child_page.show_on_menu && child_page.visible?) %>
               <li class="<%= 'dropdown-item' if child_page.has_visible_children? %><%= (child_page.id == @active_menu_item) ? ' -active' : ''%>">
