changes color of label in pie

--- a/app/assets/javascripts/templates/front/charts/pie.hbs
+++ b/app/assets/javascripts/templates/front/charts/pie.hbs
@@ -92,8 +92,9 @@
           "text": {
             "template": {{{xLabel}}}
           },
-          "fill": {"value": "black"},
-          "fontWeight": {"value": 300}
+          "fill": {"value": "#555555"},
+          "fontWeight": {"value": 300},
+          "font": {"value": "\"Fira Sans\""}
         }
       }
   }],
